# DoodleToDream

./: Classification(acc, eff score)  README.md  pyproject.toml  requirements.txt  sketchGPT  sketchGPT.py
SketchGPT/configs/: config.json  smoke_test.json
SketchGPT/src/sketchgpt/: __init__.py  __main__.py  core.py  data.py  model.py  pipeline.py  visualization.py
VQ-SGen/: README.md
VQ-SGen/configs/: config.json  smoke_test.json
VQ-SGen/src/vq_sgen/: __init__.py  __main__.py  artifacts.py  base.py  data.py  models.py  pipeline.py  runner.py
evaluation_metrics/: classification_metrics.py  evaluation_KID.py
legacy/: VQ_SGen_ver27.ipynb  classification_final.ipynb  classification_mobilenetv2.ipynb  sketchGPT.py
scripts/: check_sketchgpt.py  check_vq_sgen.py  compute_confidence.py  generate_images_sketchgpt.py  generate_images_vq_sgen.py  run_sketchgpt.py  run_vq_sgen.py  train_classification.py  train_generation_sketchgpt.py  train_generation_vq_sgen.py
scripts/configs/: default.json  smoke_test.json
src/classification/: __init__.py  data.py  infer.py  model.py  train.py
src/evaluation/: __init__.py  confidence.py
src/generation/SketchGPT/: __init__.py  config.py  data.py  generate.py  models.py  pipeline.py  pipeline_runtime.py  train.py  training.py  visualization.py
src/generation/VQ-SGen/: config.py  datasets.py  generate.py  models.py  pipeline.py  quickdraw.py  stage_config.py  train.py  train_pipeline.py  utils.py
